common/force-app/main/default/objects/Case/fields/Acknowledged_2nd_AFCA_Email_Response__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_2nd_AFCA_Email_Response__c</fullName>
    <label>Acknowledged 2nd AFCA Email + Response</label>
    <type>Date</type>
</CustomField>