common/force-app/main/default/objects/Case/fields/Acknowledged_first_AFCA_Email_and_Eespon__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_first_AFCA_Email_and_Eespon__c</fullName>
    <label>Acknowledged First AFCA Email + Response</label>
    <type>Date</type>
</CustomField>