common/force-app/main/default/objects/Case/fields/Acknowledged_third_AFCA_email_and_respon__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_third_AFCA_email_and_respon__c</fullName>
    <label>Acknowledged 3rd AFCA Email and Response</label>
    <type>Date</type>
</CustomField>