common/force-app/main/default/objects/Case/fields/AFCA_Initial_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Initial_Email_Date__c</fullName>
    <description>For use of complaints that fall under the EDR policy</description>
    <label>AFCA Initial Email Date</label>
    <type>Date</type>
</CustomField>