common/force-app/main/default/objects/Case/fields/AFCA_Stage__c.field-meta.xml
<CustomField>
    <fullName>AFCA_Stage__c</fullName>
    <label>AFCA Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registration and Referral</fullName>
            </value>
            <value>
                <fullName>Rules Review 1</fullName>
            </value>
            <value>
                <fullName>Case Management 1</fullName>
            </value>
            <value>
                <fullName>Case Management 2</fullName>
            </value>
            <value>
                <fullName>Case Management Conciliation</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Decision – Determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>