common/force-app/main/default/objects/Case/fields/Associated_Product__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>