common/force-app/main/default/objects/Case/fields/Breach_Number__c.field-meta.xml
<CustomField>
    <fullName>Breach_Number__c</fullName>
    <displayFormat>B-{0000}</displayFormat>
    <label>Breach Number</label>
    <type>AutoNumber</type>
</CustomField>