common/force-app/main/default/objects/Case/fields/Breached_By__c.field-meta.xml
<CustomField>
    <fullName>Breached_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breached By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>