common/force-app/main/default/objects/Case/fields/Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Manager__c</fullName>
    <label>Case Manager</label>
    <length>40</length>
    <type>Text</type>
</CustomField>