common/force-app/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>