common/force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>This is the custom field created for Investor Support Register</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account Details update</fullName>
            </value>
            <value>
                <fullName>Bounce back of distribution (when account details accurate)</fullName>
            </value>
            <value>
                <fullName>DM to answer</fullName>
            </value>
            <value>
                <fullName>Latest Update not received</fullName>
            </value>
            <value>
                <fullName>Request for Product Disclosure Statement</fullName>
            </value>
            <value>
                <fullName>My payment is less than expected, why?</fullName>
            </value>
            <value>
                <fullName>Request latest valuation</fullName>
            </value>
            <value>
                <fullName>Request current FY’s annual statements</fullName>
            </value>
            <value>
                <fullName>Request past FY’s annual statements</fullName>
            </value>
            <value>
                <fullName>Request current FY’s distribution statement</fullName>
            </value>
            <value>
                <fullName>Request past FY’s distribution statement</fullName>
            </value>
            <value>
                <fullName>Request confirmation of holdings statement</fullName>
            </value>
            <value>
                <fullName>Request one off remittance / distribution statement</fullName>
            </value>
            <value>
                <fullName>Request current FY’s Financial Statements</fullName>
            </value>
            <value>
                <fullName>Request past FY’s Financial Statements</fullName>
            </value>
            <value>
                <fullName>Not reflecting details correctly - (potentially unit register issue)</fullName>
            </value>
            <value>
                <fullName>Investment not showing on the dashboard</fullName>
            </value>
            <value>
                <fullName>Incorrect status of investment</fullName>
            </value>
            <value>
                <fullName>Please process redemption request</fullName>
            </value>
            <value>
                <fullName>Change of investment ownership and ID</fullName>
            </value>
            <value>
                <fullName>Change of contact details (phone / email / address)</fullName>
            </value>
            <value>
                <fullName>Hardship request</fullName>
            </value>
            <value>
                <fullName>Cancel and Refund Investment</fullName>
            </value>
            <value>
                <fullName>Incorrect bank Bank Account Details used after providing new ones.</fullName>
            </value>
            <value>
                <fullName>Bounce back of distribution (when account details are accurate)</fullName>
            </value>
            <value>
                <fullName>Easily identifiable references</fullName>
            </value>
            <value>
                <fullName>Timing of return of capital on matured investments.</fullName>
            </value>
            <value>
                <fullName>Detailed explanation required on cause of liquidity constraints.</fullName>
            </value>
            <value>
                <fullName>Late communication on matured/maturing investment redemptions not being able to be met.</fullName>
            </value>
            <value>
                <fullName>Delayed communication on expected outcomes of projects.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>