common/force-app/main/default/objects/Case/fields/Complaint_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>