common/force-app/main/default/objects/Case/fields/Date_ASIC_Notified__c.field-meta.xml
<CustomField>
    <fullName>Date_ASIC_Notified__c</fullName>
    <label>Date ASIC Notified</label>
    <type>Date</type>
</CustomField>