common/force-app/main/default/objects/Case/fields/Date_ASIC_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_ASIC_Response__c</fullName>
    <label>Date ASIC Response</label>
    <type>Date</type>
</CustomField>