common/force-app/main/default/objects/Case/fields/Date_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Breach__c</fullName>
    <label>Date of Breach</label>
    <type>Date</type>
</CustomField>