common/force-app/main/default/objects/Case/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <label>Date Discovered</label>
    <type>Date</type>
</CustomField>