common/force-app/main/default/objects/Case/fields/Details_of_Systemic_Breach__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Systemic_Breach__c</fullName>
    <label>Details of Systemic Breach</label>
    <type>TextArea</type>
</CustomField>