common/force-app/main/default/objects/Case/fields/Duration_Spent_to_Complete_the_Training1__c.field-meta.xml
<CustomField>
    <fullName>Duration_Spent_to_Complete_the_Training1__c</fullName>
    <inlineHelpText>If its 1 hours 30 minutes, Please input 1.5</inlineHelpText>
    <label>Hours Spent to Complete the Training</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>