common/force-app/main/default/objects/Case/fields/Exam_Result__c.field-meta.xml
<CustomField>
    <fullName>Exam_Result__c</fullName>
    <label>Exam Result</label>
    <type>TextArea</type>
</CustomField>