common/force-app/main/default/objects/Case/fields/IDR_Case_Reminder__c.field-meta.xml
<CustomField>
    <fullName>IDR_Case_Reminder__c</fullName>
    <inlineHelpText>This ensures that relative person is receiving a notification 5 days prior to resolve a complaint.</inlineHelpText>
    <label>IDR Case Reminder</label>
    <type>Date</type>
</CustomField>