common/force-app/main/default/objects/Case/fields/Internal_Company__c.field-meta.xml
<CustomField>
    <fullName>Internal_Company__c</fullName>
    <label>Product Issuer (AFSL or Company)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>VCPP</fullName>
            </value>
            <value>
                <fullName>GSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>