common/force-app/main/default/objects/Case/fields/Is_This_A_Systemic_Breach__c.field-meta.xml
<CustomField>
    <fullName>Is_This_A_Systemic_Breach__c</fullName>
    <label>Is this a Systemic Breach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>