common/force-app/main/default/objects/Case/fields/Link_to_Training_Materials__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Training_Materials__c</fullName>
    <label>Link to Training Materials</label>
    <type>Url</type>
</CustomField>