common/force-app/main/default/objects/Case/fields/Name_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Training__c</fullName>
    <label>Name of Training</label>
    <type>TextArea</type>
</CustomField>