common/force-app/main/default/objects/Case/fields/Other_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Case_Reason__c</fullName>
    <label>Case Reason - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>