common/force-app/main/default/objects/Case/fields/Policy_Link__c.field-meta.xml
<CustomField>
    <fullName>Policy_Link__c</fullName>
    <label>Policy Link</label>
    <type>Url</type>
</CustomField>