common/force-app/main/default/objects/Case/fields/Precaution_to_Avoid_Breach__c.field-meta.xml
<CustomField>
    <fullName>Precaution_to_Avoid_Breach__c</fullName>
    <label>Precaution to Avoid Breach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training Provided to CRC</fullName>
            </value>
            <value>
                <fullName>Training Provided to CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>