common/force-app/main/default/objects/Case/fields/Qualification_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Acquired__c</fullName>
    <label>Qualification Acquired</label>
    <type>TextArea</type>
</CustomField>