common/force-app/main/default/objects/Case/fields/Reason_For_Choosing_the_Training__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Choosing_the_Training__c</fullName>
    <label>Reason For Choosing the Training</label>
    <type>TextArea</type>
</CustomField>