common/force-app/main/default/objects/Case/fields/Reason_for_no_Breach_recorded__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_no_Breach_recorded__c</fullName>
    <label>Reason for no Breach recorded</label>
    <type>TextArea</type>
</CustomField>