common/force-app/main/default/objects/Case/fields/Related_AFSL__c.field-meta.xml
<CustomField>
    <fullName>Related_AFSL__c</fullName>
    <label>Related AFSL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VC</fullName>
            </value>
            <value>
                <fullName>GSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>