common/force-app/main/default/objects/Case/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>