common/force-app/main/default/objects/Case/fields/Resolved_by_Funds_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resolved_by_Funds_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolved by Funds Manager?</label>
    <type>Checkbox</type>
</CustomField>