common/force-app/main/default/objects/Case/fields/Responsible_Manager_Training__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Manager_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsible Manager Training</label>
    <type>Checkbox</type>
</CustomField>