common/force-app/main/default/objects/Case/fields/Significance__c.field-meta.xml
<CustomField>
    <fullName>Significance__c</fullName>
    <label>Significance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Significant</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>