common/force-app/main/default/objects/Case/fields/Situations_Handled_By__c.field-meta.xml
<CustomField>
    <fullName>Situations_Handled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The manager who dealt with situation</inlineHelpText>
    <label>Situation Handled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>