common/force-app/main/default/objects/Case/fields/Training_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Completion_Date__c</fullName>
    <label>Training Completion Date</label>
    <type>Date</type>
</CustomField>