common/force-app/main/default/objects/Case/fields/Type_of_Breach__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Breach__c</fullName>
    <label>Type of Breach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breach</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>