common/force-app/main/default/objects/Case/fields/X5_day_aknowledgement_email_sent__c.field-meta.xml
<CustomField>
    <fullName>X5_day_aknowledgement_email_sent__c</fullName>
    <label>5 day acknowledgement email sent</label>
    <type>Date</type>
</CustomField>