common/force-app/main/default/objects/Case/recordTypes/Breach_Register.recordType-meta.xml
<RecordType>
    <fullName>Breach_Register</fullName>
    <active>true</active>
    <businessProcess>Breach Register</businessProcess>
    <label>Breach Register</label>
</RecordType>