common/force-app/main/default/objects/Case/recordTypes/Complaints_Register.recordType-meta.xml
<RecordType>
    <fullName>Complaints_Register</fullName>
    <active>true</active>
    <businessProcess>Complaints Register</businessProcess>
    <description>IDR Register - Internal</description>
    <label>Complaints Register</label>
</RecordType>