common/force-app/main/default/objects/Case/recordTypes/EDR_Complaints_Register.recordType-meta.xml
<RecordType>
    <fullName>EDR_Complaints_Register</fullName>
    <active>true</active>
    <businessProcess>Complaints Register</businessProcess>
    <description>EDR Register - External</description>
    <label>EDR Complaints Register</label>
</RecordType>