common/force-app/main/default/objects/Case/recordTypes/SF_Support.recordType-meta.xml
<RecordType>
    <fullName>SF_Support</fullName>
    <active>true</active>
    <businessProcess>Support Register</businessProcess>
    <label>SF Support</label>
</RecordType>