common/force-app/main/default/objects/Case/recordTypes/Support_Register.recordType-meta.xml
<RecordType>
    <fullName>Support_Register</fullName>
    <active>true</active>
    <businessProcess>Support Register</businessProcess>
    <label>Investor Support Register</label>
</RecordType>