common/force-app/main/default/objects/Case/recordTypes/Training_Register.recordType-meta.xml
<RecordType>
    <fullName>Training_Register</fullName>
    <active>true</active>
    <businessProcess>Training Register</businessProcess>
    <label>Training Register</label>
</RecordType>