common/force-app/main/default/objects/Case/validationRules/Acknowledgement_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Acknowledgement_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
($RecordType.Name= &apos; Complaints Register&apos;),
(Complaint_Acknowledgement__c = TRUE),

OR(
(ISBLANK( X5_day_aknowledgement_email_sent__c))
))</errorConditionFormula>
    <errorMessage>Please fill in Acknowledgement date.</errorMessage>
</ValidationRule>