common/force-app/main/default/objects/Case/validationRules/Case_Resolution_for_Case_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Resolution_for_Case_Closed</fullName>
    <active>true</active>
    <description>Require a Case Resolution whenever the Case Status is set to Closed.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status , &quot;Closed&quot;),
ISBLANK( Case_Resolution__c ) 

)</errorConditionFormula>
    <errorMessage>For closed cases, indicate the corresponding case resolution.</errorMessage>
</ValidationRule>