common/force-app/main/default/objects/Case/validationRules/GSL_Breach_Register_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>GSL_Breach_Register_Validations</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Related_AFSL__c , &apos;GSL&apos; ),
ISPICKVAL(  Type_of_Breach__c , &apos;Breach&apos; ),

OR(
(ISBLANK( Date_Registered__c )),
(ISBLANK(  Date_of_Breach__c )),
(ISPICKVAL(  Significance__c, &apos;&apos; )),
(ISBLANK(  Reported_By__c )),
(ISBLANK(  Representative__c ))

))</errorConditionFormula>
    <errorMessage>Please fill in, Date Registered, Date of Breach, Significance, Representative and reported by fields to proceed.</errorMessage>
</ValidationRule>