common/force-app/main/default/objects/Case/validationRules/If_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Other</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Reason , &apos;other&apos;)  &amp;&amp;  ISBLANK( Other_Case_Reason__c )</errorConditionFormula>
    <errorDisplayField>Other_Case_Reason__c</errorDisplayField>
    <errorMessage>Please specify the reason</errorMessage>
</ValidationRule>