common/force-app/main/default/objects/Case/validationRules/Systemic_Breach.validationRule-meta.xml
<ValidationRule>
    <fullName>Systemic_Breach</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Is_This_A_Systemic_Breach__c,&quot;Yes&quot;), ISBLANK( Details_of_Systemic_Breach__c ))</errorConditionFormula>
    <errorDisplayField>Details_of_Systemic_Breach__c</errorDisplayField>
    <errorMessage>Please Enter the Details</errorMessage>
</ValidationRule>