common/force-app/main/default/objects/Case/listViews/CM_Case.listView-meta.xml
<ListView>
    <fullName>CM_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CM</label>
    <queue>CM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>