common/force-app/main/default/objects/Case/listViews/My_Investor_Support_Q.listView-meta.xml
<ListView>
    <fullName>My_Investor_Support_Q</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Support_Register</value>
    </filters>
    <label>My Investor Support Q</label>
</ListView>