common/force-app/main/default/objects/Case/listViews/Training_Register.listView-meta.xml
<ListView>
    <fullName>Training_Register</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Training_Register</value>
    </filters>
    <label>Training Register</label>
</ListView>